@@ -81,6 +81,14 @@ overriden by
 .I -s
 option, see above.
 
+.PP
+Before invoking
+.IR prog ,
+.B checkpassword-pam
+sets environment variables
+.BR USER ", " HOME ", and " SHELL
+to appropriate values.
+
 
 .SH "DEBUGGING"
 .PP
